--- a/package.json
+++ b/package.json
@@ -32,18 +32,28 @@
     "typescript": "^4.9.5",
     "styled-components": "^5.3.3"
   },
-  "peerDependencies": {
-    "react": "*"
-  },
-  "repository": "https://github.com/pp-paciorek/components-library",
-  "author": "Jacek Paciorek <jack.paciorek@gmail.com> (https://github.com/booua)",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/runtime": "^7.16.0",
     "@callstack/eslint-config": "^14.0.0",
     "eslint": "^8.4.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "prettier": "^2.2.1"
   },
+  "peerDependencies": {
+    "react": "*"
+  },
+  "repository": "https://github.com/pp-paciorek/components-library",
+  "author": "Jacek Paciorek <jack.paciorek@gmail.com> (https://github.com/booua)",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
